--- a/indexprincipal.css
+++ b/indexprincipal.css
@@ -7,16 +7,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;   
+    background-color: rgb( 239, 184, 16);
 }
 .header-nav-bar img{
     width: 10%;
     height: 10%;
     margin: 0.5%;
-    border-radius: 5%;
+    border-radius: 9%;
 }
 .header-nav-bar a{
     background-color: black;
-    border-bottom: rgb( 239, 184, 16) solid 3px;
+    border-bottom: rgb( 239, 184, 16) solid 3.5px;
     color: rgb( 239, 184, 16);
     color: white;
     list-style: none;
@@ -45,19 +46,29 @@ h1{
     text-align: center;
     padding: 2rem;
     font-size: 5em;
-    text-shadow: rgb( 239, 184, 16) 2px 2px 2px;
+    text-shadow: rgb( 239, 184, 16) 2px 2px 4px;
     text-transform: uppercase;
+    margin-bottom: 3rem;
+
 }
 /*container central contrendo imagens (inicio)*/
 .div-h2{
-   background-color: black;
-   padding: 1rem;
+   padding: 0.5rem;
+   background-color: rgba(0, 0, 0, 0.977);
+   text-align: center;
+   margin-left: 30%;
+   margin-right: 30%;
+   border-radius: 3%;
+   box-shadow: rgb( 239, 184, 16) -4px 4px 5px ;
+   
 }
+
 h2{
     text-align: center;
-    color: white;
-    font-size: 3rem;
+    color: rgb( 239, 184, 16);
+    font-size: 2.8rem;
     display: block;
+    text-shadow:  white 2px 1px 1px;
 }
 .div-conteudo{
     padding: 3rem;
@@ -67,15 +78,15 @@ h2{
     justify-content: space-between;
     margin: 0;  
 }
-.container-img img{
-    width: 100%;
-   height: 80%;
+.container-img img{  
    margin-top: 0;
 }
-.div-img{   
-}
-/*container central contrendo imagens (fim)*/
 
+/*container central contrendo imagens (fim)*/
+.sobre-nos{
+    padding: 1rem;
+    margin-top: 2rem;
+}
 footer{
     background-color: black;
 
