--- a/indexprincipal.css
+++ b/indexprincipal.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;   
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 .header-nav-bar{
@@ -17,16 +17,17 @@
 }
 .header-nav-bar a{
     background-color: black;
-    border-bottom: rgb( 239, 184, 16) solid 3.5px;
+    box-shadow: white 2px 2px 2px;
     color: rgb( 239, 184, 16);
     color: white;
     list-style: none;
     padding: 0.6rem;
-    font-size: 1.2rem;
-    border-radius: 10%;
+    font-size: 1.1rem;
+    border-radius: 7%;
     margin: 0;
     text-decoration: none;
-    letter-spacing: 2px;
+    letter-spacing:1px;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     
 }
 li{
@@ -43,12 +44,14 @@ li{
     margin-right: 25px;
 }
 h1{
-    text-align: center;
+    /* text-align: center; */
     padding: 2rem;
-    font-size: 5em;
-    text-shadow: rgb( 239, 184, 16) 2px 2px 4px;
-    text-transform: uppercase;
+    font-size: 3rem;
+    /* text-shadow: rgb( 239, 184, 16) 2px 2px 4px; */
+     text-transform: uppercase; 
     margin-bottom: 3rem;
+    letter-spacing:5px;
+    
 
 }
 /*container central contrendo imagens (inicio)*/
@@ -68,18 +71,22 @@ h2{
     color: rgb( 239, 184, 16);
     font-size: 2.8rem;
     display: block;
-    text-shadow:  white 2px 1px 1px;
+    letter-spacing: 2px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .div-conteudo{
     padding: 3rem;
+    
 }
 .container-img{
     display: flex;
-    justify-content: space-between;
-    margin: 0;  
+    gap: 0.1rem;
+    justify-content: space-around;
+    margin: 0;
 }
 .container-img img{  
-   margin-top: 0;
+    border-radius: 1%;
+    border:solid rgb( 239, 184, 16) 2px;
 }
 
 /*container central contrendo imagens (fim)*/
