--- a/indexprincipal.css
+++ b/indexprincipal.css
@@ -1,6 +1,5 @@
-*{
-    margin: 0;   
-    
+body{
+    margin: 0;    
 }
 
 .header-nav-bar{
@@ -8,6 +7,7 @@
     justify-content: space-between;
     align-items: center;   
     background-color: rgb( 239, 184, 16);
+    padding: 30px;
 }
 .header-nav-bar img{
     width: 10%;
@@ -18,17 +18,16 @@
 .header-nav-bar a{
     background-color: black;
     box-shadow: white 2px 2px 2px;
-    color: rgb( 239, 184, 16);
+    color: rgb(239, 220, 16);
     color: white;
     list-style: none;
-    padding: 0.6rem;
+    padding: 0.8rem;
     font-size: 1.1rem;
     border-radius: 7%;
     margin: 0;
     text-decoration: none;
-    letter-spacing:1px;
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-    
+    letter-spacing:2px;
+   
 }
 li{
     list-style: none;
@@ -50,9 +49,9 @@ h1{
     /* text-shadow: rgb( 239, 184, 16) 2px 2px 4px; */
      text-transform: uppercase; 
     margin-bottom: 3rem;
+    text-shadow: 14px 1px 15px  rgb( 239, 184, 16); 
+    font-family:'Courier New', Courier, monospace;
     letter-spacing:5px;
-    
-
 }
 /*container central contrendo imagens (inicio)*/
 .div-h2{
@@ -86,7 +85,7 @@ h2{
 }
 .container-img img{  
     border-radius: 1%;
-    border:solid rgb( 239, 184, 16) 2px;
+
 }
 
 /*container central contrendo imagens (fim)*/
